# rust_wgpu_tutorial

./: Cargo.toml  README.md
src/: lib.rs  main.rs  shader.wgsl
window/: Cargo.toml
window/src/: lib.rs  shader.wgsl
