[package]
name = "wgpu_tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0"
env_logger = "0"
log = "0"
wgpu = "0"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]